# Cmake

./: README.md  _sidebar.md
demo/: CMakeCache.txt  CmakeLists.txt  Makefile  cmake_install.cmake
demo1/: CMakeCache.txt  CmakeLists.txt  Demo1  Makefile  cmake_install.cmake  main.cpp
demo1/math/: CMakeLists.txt  Makefile  MathFunctions.cpp  MathFunctions.h  cmake_install.cmake
demo2_install/: CMakeCache.txt  CmakeLists.txt  Demo1  Makefile  cmake_install.cmake  install_manifest.txt  main.cpp
demo2_install/math/: CMakeLists.txt  Makefile  MathFunctions.cpp  MathFunctions.h  cmake_install.cmake
demo_git_config/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo_git_config  utils.cmake
demo_git_config/include/: utils.h
